  doing a topic lookup. This avoids prompting (like 'no command plugins/loom,
  did you mean log?') when getting help. In future we may trigger the hook 
  deliberately when no help topics match from any help index.
  (Robert Collins, #396261)

* ``bzr remove-tree`` can now remove multiple working trees.
  (Jared Hance, Andrew Bennetts, #253137)

* ``bzr upgrade`` now names backup directory as ``backup.bzr.~N~`` instead
  of ``backup.bzr``. This directory is ignored by bzr commands such as
  ``add``.
  (Parth Malwankar, #335033, #300001)

* Network transfer amounts and rates are now displayed in SI units according
  to the Ubuntu Units Policy <https://wiki.ubuntu.com/UnitsPolicy>.
  (Gordon Tyler, #514399)

* Support kind markers for socket and fifo filesystem objects. This
  prevents ``bzr status --short`` from crashing when those files are
  present.  (John Arbash Meinel, #303275)

* Tolerate patches with leading noise in ``bzr-handle-patch``.
  (Toshio Kuratomi, Martin Pool, #502076)

API Changes
***********

* New ``bzrlib.initialize`` is recommended for programs using bzrlib to 
  run when starting up; it sets up several things that previously needed
  to be done separately.
  (Martin Pool, #507710)

* Remove unused ``CommandFailed`` exception.
  (Martin Pool)

Internals
*********

* ``bzrlib.commands.run_bzr`` is more extensible: callers can supply the
  functions to load or disable plugins if they wish to use a different
  plugin mechanism; the --help, --version and no-command name code paths
  now use the generic pluggable command lookup infrastructure.
  (Robert Collins)

Testing
*******

* New `bzrlib.tests.test_import_tariff` can make assertions about what
  Python modules are loaded, to guard against startup time or library
  dependency regressions.
  (Martin Pool)

* Stop sending apport crash files to ``.cache`` in the directory from
  which ``bzr selftest`` was run.  (Martin Pool, #422350)

bzr 2.1.1
#########

:2.1.1: not released yet

Bug Fixes