@@ -479,16 +479,42 @@ class ContentsConflict(PathConflict):
     def associated_filenames(self):
         return [self.path + suffix for suffix in ('.BASE', '.OTHER')]
 
-    # FIXME: I smell something weird here and it seems we should be able to be
-    # more coherent with some other conflict ? bzr *did* a choice there but
-    # neither action_take_this nor action_take_other reflect that...
-    # -- vila 20091224
+    def _take_it(self, tree, suffix):
+        """Resolve the conflict.
+
+        :param tree: The working tree where the confict is resolved.
+        :param suffix: Either 'THIS' or 'OTHER'
+
+        The resolution is symmetric, when taking THIS, OTHER is deleted and
+        item.THIS is renamed into item and vice-versa.
+
+        Note that suffix='OTHER' really means takes 'THIS' and vice-versa.
+        """
+        tt = transform.TreeTransform(tree)
+        try:
+            try:
+                # Delete 'item.THIS' or 'item.OTHER' depending on suffix
+                tt.delete_contents(
+                    tt.trans_id_tree_path(self.path + '.' + suffix))
+            except errors.NoSuchFile:
+                # There are valid cases where 'item.suffix' either never
+                # existed or was already deleted (including the case where the
+                # user deleted it)
+                pass
+            # Rename 'item.suffix' (note that if 'item.suffix' has been
+            # deleted, this is a no-op)
+            this_tid = tt.trans_id_file_id(self.file_id)
+            parent_tid = tt.get_tree_parent(this_tid)
+            tt.adjust_path(self.path, parent_tid, this_tid)
+            tt.apply()
+        finally:
+            tt.finalize()
+
     def action_take_this(self, tree):
-        tree.remove([self.path + '.OTHER'], force=True, keep_files=False)
+        self._take_it(tree, 'OTHER')
 
     def action_take_other(self, tree):
-        tree.remove([self.path], force=True, keep_files=False)
-
+        self._take_it(tree, 'THIS')
 
 
 # FIXME: TextConflict is about a single file-id, there never is a conflict_path
